update dashboard structure

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,8 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icomoon@1.0.0/style.css">
-    <script src="https://kit.fontawesome.com/0d67f6bb4c.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/0d67f6bb4c.js" crossorigin="anonymous"></script> -->
     <title>Safe Courier 📦</title>
   </head>
   <body>
