add css via cdn

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.css" rel="stylesheet" />
-    <!-- <script src="https://kit.fontawesome.com/0d67f6bb4c.js" crossorigin="anonymous"></script> -->
+    <link href="https://website50141.nicepage.io/nicepage.css" rel="stylesheet" />
     <title>Safe Courier 📦</title>
   </head>
   <body>
